OldDiscord.css
:root {
    --text-feedback-positive: #2DC771 !important;
}

:has(> .wrapper__6e9f8), :has(> .circleIconButton__5bc7e) {
    border-radius: 50%;
    mask: none !important;
    transition: border-radius linear .1s;
}

:has(> .selected__6e9f8), :has(> .selected__5bc7e) {
    border-radius: 25%;
    /* mask: none !important; */
}

.iconInactive_f34534 {
    border-radius: 50% !important;
}

.container__2637a {
    padding-bottom: calc(var(--custom-app-panels-height, 0) - 4px) !important;
}

.panels_c48ade {
    left: var(--custom-guild-list-width) !important;
    bottom: 0 !important;
    border-radius: 0 !important;
    /* margin-left: var(--space-xs); */
    width: calc(var(--custom-guild-sidebar-width) - var(--custom-guild-list-width)) !important;
}

.wrapper_ef3116 {
    margin-bottom: 0px !important;
}

.sidebar_c48ade:after {
    height: 0px !important;
}

.gradientBackground__11664 {
    display: none;
}

